# netbox-grafana-annotations-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Makefile  README.md  TESTING.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yaml  publish-pypi.yaml
architecture/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
docs/: architecture.md  configuration.md  setup-guide.md  troubleshooting.md
docs/images/: README.md
netbox_grafana_annotations_plugin/: __init__.py  filtersets.py  grafana_client.py  mapping.py  models.py  navigation.py  parsing.py  search.py  settings.py  tables.py  urls.py  views.py  webhook.py
netbox_grafana_annotations_plugin/api/: __init__.py  serializers.py
netbox_grafana_annotations_plugin/migrations/: 0001_initial.py  __init__.py
netbox_grafana_annotations_plugin/templates/netbox_grafana_annotations_plugin/: annotationlog.html
netbox_grafana_annotations_plugin/testing/: __init__.py  utils.py
netbox_grafana_annotations_plugin/tests/: __init__.py  test_mapping.py  test_models.py  test_parsing.py  test_views.py  test_webhook.py
search/: search_index.json
setup-guide/: index.html
testing/: configuration.py
tests/: __init__.py
troubleshooting/: index.html
